added forms presentation module

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,6 +8,7 @@
     "weather_wind": "Wind",
     "weather_chance_of_rain": "Chance of rain",
     "weather_home_page": "Weather",
+    "forms_home_page": "Forms",
 
     "reddit_posts_home_page": "Posts"
 }
