--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,5 +25,6 @@
     "forms_email": "Email",
     "forms_password": "Password",
     "forms_repeat_password": "Repeat Password",
+    "forms_agree_to_terms": "I agree to Terms and Conditions",
     "forms_form_has_error": "There are errors in the form. Please check all fields."
 }
