--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -29,6 +29,9 @@
     "forms_repeat_password": "Repeat Password",
     "forms_agree_to_terms": "I agree to Terms and Conditions",
     "forms_form_has_error": "There are errors in the form. Please check all fields.",
+    "forms_dropdown_menu": "Select option",
+    "forms_picker": "Search and select option",
+    "forms_search_hint": "Search for something",
 
     "webview_home_page": "WebView",
     "webview_embedded": "Embedded",
