--- a/common/presentation/lib/l10n/app_en.arb
+++ b/common/presentation/lib/l10n/app_en.arb
@@ -1,4 +1,7 @@
 {
+    "common_no_connection": "No connection",
+    "common_back_online": "Back online",
+
     "common_ok": "OK",
     "common_error": "Error",
     "common_loading": "Loading",
