added stackoverflow with riverpod

--- a/features/home/presentation/lib/l10n/app_en.arb
+++ b/features/home/presentation/lib/l10n/app_en.arb
@@ -2,6 +2,7 @@
     "home_other_experiments": "Other experiments",
     "home_webview": "Webview",
     "home_experiments": "Experiments",
+    "home_stackoverflow": "Stackoverflow",
     "home_forms": "Forms",
     "home_posts": "Posts",
     "home_weather": "Weather"
