--- a/features/home/presentation/lib/l10n/app_en.arb
+++ b/features/home/presentation/lib/l10n/app_en.arb
@@ -5,5 +5,6 @@
     "home_stackoverflow": "Stackoverflow",
     "home_forms": "Forms",
     "home_posts": "Posts",
-    "home_weather": "Weather"
+    "home_weather": "Weather",
+    "home_others": "Others"
 }
